# howdo

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml  test.yml
src/: main.rs
tests/: bench.sh  mock_server.py  test_providers.sh
